@@ -1,3 +1,12 @@
+2011-02-27 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/ralloc2.cc,
+	  src/z80/gen.c,
+	  src/z80/main.c,
+	  src/z80/peep.c,
+	  src/z80/peeph-z80.def:
+	  Various minor improvements.
+
 2011-02-26 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/peeph-z80.def
